Rest of Ch20 content

--- a/Neff/Other/68830_RE_03_01.html
+++ b/Neff/Other/68830_RE_03_01.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="bdb25361c090a46c382a06ab5248940a3"></div>
+    <div id="b496f5b03e67245c999e1e63f05aacbd2"></div>
     <script src="js/d3.v3.min.js"></script>
     
 	<script src="js/brixlib-compiled.js"></script>
@@ -23,12 +23,12 @@
 	// The activity config that defines the brix and mortar for this page
 	a.config =
 		{
-			"description": "Hydropower dam",
+			"description": "How a wind turbine works",
 			"containerConfig":
 				[
 					{
 						"description": "container for the graph and labels",
-						"containerId": "bdb25361c090a46c382a06ab5248940a3",
+						"containerId": "b496f5b03e67245c999e1e63f05aacbd2",
 						"brixConfig":
 							[
 								{
@@ -37,8 +37,8 @@
 									"config":
 										{
 											"id": "image1",
-                                            "caption": "Hydropower dam schematic",
-                                            "actualSize": {"height": 390, "width": 457},
+                                            "caption": "How a wind turbine works",
+                                            "actualSize": {"height": 344, "width": 477},
                                             "displayWidth": 457
 										},
                                     "configFixup":
@@ -52,7 +52,7 @@
                                                         "parts":
                                                         [
                                                             { "type": "ref", "domain": "info", "refId": "imgBaseUrl" },
-                                                            { "type": "constant", "value": "img/68830_RE_01_01.png" }
+                                                            { "type": "constant", "value": "img/68830_RE_03_01.png" }
                                                         ]
                                                     }
                                             }
@@ -66,10 +66,9 @@
                                             "id": "dataLabels",
                                             "type": "numbered",
                                             "labels": [
-                                                {"content": "1", "xyPos": [0.035, 0.65], "width": 0},
-                                                {"content": "2", "xyPos": [0.47, 0.27], "width": 0},
-                                                {"content": "3", "xyPos": [0.42, 0.58], "width": 0},
-                                                {"content": "4", "xyPos": [0.67, 0.66], "width": 0}
+                                                {"content": "1", "xyPos": [0.17, 0.93], "width": 0},
+                                                {"content": "2", "xyPos": [0.49, 0.47], "width": 0},
+                                                {"content": "3", "xyPos": [0.82, 0.52], "width": 0}
                                                     ]
                                         }
                                 },
@@ -78,7 +77,7 @@
 									"bricType": "SvgContainer",
 									"config":
 										{
-											"maxSize": {"height": 385, "width": 457}
+											"maxSize": {"height": 344, "width": 457}
 										},
 									"configFixup":
                                         [
@@ -88,7 +87,7 @@
                                                 "value":
                                                     {
                                                         "type": "d3select",
-                                                        "selector": "#bdb25361c090a46c382a06ab5248940a3"
+                                                        "selector": "#b496f5b03e67245c999e1e63f05aacbd2"
                                                     }
                                             }
                                         ]
@@ -130,7 +129,7 @@
 					},
 					{
                         "description": "The container contains the liteable callouts",
-                        "containerId": "bdb25361c090a46c382a06ab5248940a3",
+                        "containerId": "b496f5b03e67245c999e1e63f05aacbd2",
                         "brixConfig":
                             [
                                 {
@@ -143,11 +142,11 @@
                                             "type": "numbered",
                                             "textBits":
                                                 [    
-                                                    {"cols": ["When the sluice gate is opened, dammed water in the reservoir (with high potential energy) falls downhill."]},
-                                                    {"cols": ["The kinetic energy of the falling water turns the turbine."]},
-                                                    {"cols": ["The generator converts the mechanical energy of the spinning turbine into electricity."]},
-                                                    {"cols": ["The transformer boosts the electricity to a high voltage for transmission to homes and businesses."]}
-                                                ]
+                                                   {"cols": ["The kinetic energy of the wind turns the blades of the turbine."]},
+                                                    {"cols": ["The generator converts the mechanical energy of the spinning shaft into electricity, which is sent to a transformer."]},
+                                                    {"cols": ["The transformer boosts the electricity to a high voltage for transmission."]}
+                           
+                                                  ]
                                         }
                                 }
                             ],
@@ -217,7 +216,7 @@
                                     "methodName": "draw",
                                     "args":
                                         [
-                                            { "type": "d3select", "selector": "#bdb25361c090a46c382a06ab5248940a3" }
+                                            { "type": "d3select", "selector": "#b496f5b03e67245c999e1e63f05aacbd2" }
                                         ]
                                 },
                                 {
