--- a/Neff/Other/68830_RE_04_02.html
+++ b/Neff/Other/68830_RE_04_02.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="b42d4bbc879d64c9caf9c59fef150856b"></div>
+    <div id="b241a1bc50d6d430592d1fd5f6aa40b1e"></div>
     <script src="js/d3.v3.min.js"></script>
     
     <script src="js/brixlib-compiled.js"></script>
@@ -28,14 +28,14 @@
 
     a.config =
         {
-			"description": "Environmental impacts and practical limitations of solar energy production",
+			"description": "Environmental impacts and practical limitations of biomass fuel production",
             //"imgBaseUrl": "http://localhost:8088/images/",
             "imgBaseUrl": "",
             "containerConfig":
                 [
                     {
                         "description": "Container for the LabelCarousel",
-                        "containerId": "b42d4bbc879d64c9caf9c59fef150856b",
+                        "containerId": "b241a1bc50d6d430592d1fd5f6aa40b1e",
                         "brixConfig":
                             [
                                 {
@@ -44,7 +44,7 @@
                                     "config":
                                         {
                                             "id": "lblCrsl1",
-                                            "imagesActualSize": { "height": 325, "width": 478 },
+                                            "imagesActualSize": { "height": 477, "width": 477 },
                                             "displayWidth": 457
                                         },
                                     "configFixup":
@@ -69,13 +69,13 @@
                                                                                         "parts":
                                                                                         [
                                                                                             { "type": "ref", "domain": "info", "refId": "imgBaseUrl" },
-                                                                                            { "type": "constant", "value": "img/68830_RE_02_03_S1.jpg" }
+                                                                                            { "type": "constant", "value": "img/68830_RE_04_02_S1.jpg" }
                                                                                         ]
                                                                                     }
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Solar energy production limited by cloudy skies and darkness<br/>            " }
+                                                                                "value": { "type": "constant", "value": "Air pollution and greenhouse gases from burning fossil fuels to make biomass fuels." }
                                                                             }
                                                                         ]
                                                                 },
@@ -91,13 +91,13 @@
                                                                                         "parts":
                                                                                         [
                                                                                             { "type": "ref", "domain": "info", "refId": "imgBaseUrl" },
-                                                                                            { "type": "constant", "value": "img/68830_RE_02_03_S2.jpg" }
+                                                                                            { "type": "constant", "value": "img/68830_RE_04_02_S2.jpg" }
                                                                                         ]
                                                                                     }
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Expense of panels and precious metals used in production" }
+                                                                                "value": { "type": "constant", "value": "Crop production uses energy, water, fertilizers, and pesticides." }
                                                                             }
                                                                         ]
                                                                 },
@@ -113,13 +113,13 @@
                                                                                         "parts":
                                                                                         [
                                                                                             { "type": "ref", "domain": "info", "refId": "imgBaseUrl" },
-                                                                                            { "type": "constant", "value": "img/68830_RE_02_03_S3.jpg" }
+                                                                                            { "type": "constant", "value": "img/68830_RE_04_02_S3.png" }
                                                                                         ]
                                                                                     }
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Land disturbance associated with the creation of large fields of solar panels" }
+                                                                                "value": { "type": "constant", "value": "Production from food crops increases food prices." }
                                                                             }
                                                                         ]
                                                                 }
@@ -133,7 +133,7 @@
                                     "bricType": "SvgContainer",
                                     "config":
                                         {
-                                            "maxSize": { "height": 420, "width": 457}
+                                            "maxSize": { "height": 570, "width": 457}
                                         },
                                     "configFixup":
                                         [
@@ -143,7 +143,7 @@
                                                 "value":
                                                     {
                                                         "type": "d3select",
-                                                        "selector": "#b42d4bbc879d64c9caf9c59fef150856b"
+                                                        "selector": "#b241a1bc50d6d430592d1fd5f6aa40b1e"
                                                     }
                                             }
                                         ]
