--- a/Neff/Other/68830_RE_07_03.html
+++ b/Neff/Other/68830_RE_07_03.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="b42d4bbc879d64c9caf9c59fef150856b"></div>
+    <div id="b2c9d0a8c2de14d7493bc6bffeb5e6ea7"></div>
     <script src="js/d3.v3.min.js"></script>
     
     <script src="js/brixlib-compiled.js"></script>
@@ -28,14 +28,14 @@
 
     a.config =
         {
-			"description": "Environmental impacts and practical limitations of solar energy production",
+			"description": "Examples of renewable energy development",
             //"imgBaseUrl": "http://localhost:8088/images/",
             "imgBaseUrl": "",
             "containerConfig":
                 [
                     {
                         "description": "Container for the LabelCarousel",
-                        "containerId": "b42d4bbc879d64c9caf9c59fef150856b",
+                        "containerId": "b2c9d0a8c2de14d7493bc6bffeb5e6ea7",
                         "brixConfig":
                             [
                                 {
@@ -44,7 +44,7 @@
                                     "config":
                                         {
                                             "id": "lblCrsl1",
-                                            "imagesActualSize": { "height": 325, "width": 478 },
+                                            "imagesActualSize": { "height": 320, "width": 477 },
                                             "displayWidth": 457
                                         },
                                     "configFixup":
@@ -69,13 +69,13 @@
                                                                                         "parts":
                                                                                         [
                                                                                             { "type": "ref", "domain": "info", "refId": "imgBaseUrl" },
-                                                                                            { "type": "constant", "value": "img/68830_RE_02_03_S1.jpg" }
+                                                                                            { "type": "constant", "value": "img/68830_RE_07_03_S1.jpg" }
                                                                                         ]
                                                                                     }
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Solar energy production limited by cloudy skies and darkness<br/>            " }
+                                                                                "value": { "type": "constant", "value": "This solar installation in Boulder City, Nevada, has 775,000 panels and provides enough power for 14,000 homes.<br/><br/>" }
                                                                             }
                                                                         ]
                                                                 },
@@ -91,13 +91,13 @@
                                                                                         "parts":
                                                                                         [
                                                                                             { "type": "ref", "domain": "info", "refId": "imgBaseUrl" },
-                                                                                            { "type": "constant", "value": "img/68830_RE_02_03_S2.jpg" }
+                                                                                            { "type": "constant", "value": "img/68830_RE_07_03_S2.jpg" }
                                                                                         ]
                                                                                     }
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Expense of panels and precious metals used in production" }
+                                                                                "value": { "type": "constant", "value": "The Alta Wind Energy Center on Tehachapi Pass in California is the largest onshore wind field in the United States and can provide power for over 400,000 homes." }
                                                                             }
                                                                         ]
                                                                 },
@@ -113,13 +113,57 @@
                                                                                         "parts":
                                                                                         [
                                                                                             { "type": "ref", "domain": "info", "refId": "imgBaseUrl" },
-                                                                                            { "type": "constant", "value": "img/68830_RE_02_03_S3.jpg" }
+                                                                                            { "type": "constant", "value": "img/68830_RE_07_03_S3.jpg" }
                                                                                         ]
                                                                                     }
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Land disturbance associated with the creation of large fields of solar panels" }
+                                                                                "value": { "type": "constant", "value": "This solar power plant in Brandenburg, Germany, produces enough electricity to support the annual needs of over 36,000 homes." }
+                                                                            }
+                                                                        ]
+                                                                },
+                                                                {
+                                                                    "type": "object",
+                                                                    "properties":
+                                                                        [
+                                                                            {
+                                                                                "name": "URI",
+                                                                                "value":
+                                                                                    {
+                                                                                        "type": "join",
+                                                                                        "parts":
+                                                                                        [
+                                                                                            { "type": "ref", "domain": "info", "refId": "imgBaseUrl" },
+                                                                                            { "type": "constant", "value": "img/68830_RE_07_03_S4.jpg" }
+                                                                                        ]
+                                                                                    }
+                                                                            },
+                                                                            {
+                                                                                "name": "caption",
+                                                                                "value": { "type": "constant", "value": "A 1.2 megawatt tidal system under installation in Ireland. When fully operational, this facility should provide enough energy for 1,000 homes." }
+                                                                            }
+                                                                        ]
+                                                                },
+                                                                {
+                                                                    "type": "object",
+                                                                    "properties":
+                                                                        [
+                                                                            {
+                                                                                "name": "URI",
+                                                                                "value":
+                                                                                    {
+                                                                                        "type": "join",
+                                                                                        "parts":
+                                                                                        [
+                                                                                            { "type": "ref", "domain": "info", "refId": "imgBaseUrl" },
+                                                                                            { "type": "constant", "value": "img/68830_RE_07_03_S5.jpg" }
+                                                                                        ]
+                                                                                    }
+                                                                            },
+                                                                            {
+                                                                                "name": "caption",
+                                                                                "value": { "type": "constant", "value": "A view of an offshore wind field northwest of Borkum, Germany.  Although such facilities are still fairly small, the potential energy generation capacity of offshore wind fields is very large." }
                                                                             }
                                                                         ]
                                                                 }
@@ -133,7 +177,7 @@
                                     "bricType": "SvgContainer",
                                     "config":
                                         {
-                                            "maxSize": { "height": 420, "width": 457}
+                                            "maxSize": { "height": 450, "width": 457}
                                         },
                                     "configFixup":
                                         [
@@ -143,7 +187,7 @@
                                                 "value":
                                                     {
                                                         "type": "d3select",
-                                                        "selector": "#b42d4bbc879d64c9caf9c59fef150856b"
+                                                        "selector": "#b2c9d0a8c2de14d7493bc6bffeb5e6ea7"
                                                     }
                                             }
                                         ]
