--- a/Neff/Other/68830_RE_04_03.html
+++ b/Neff/Other/68830_RE_04_03.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="b42d4bbc879d64c9caf9c59fef150856b"></div>
+    <div id="bc48a0159a5a5487e8a54fc1409bc3d7e"></div>
     <script src="js/d3.v3.min.js"></script>
     
     <script src="js/brixlib-compiled.js"></script>
@@ -28,14 +28,14 @@
 
     a.config =
         {
-			"description": "Environmental impacts and practical limitations of solar energy production",
+			"description": "Second-generation biomass fuels",
             //"imgBaseUrl": "http://localhost:8088/images/",
             "imgBaseUrl": "",
             "containerConfig":
                 [
                     {
                         "description": "Container for the LabelCarousel",
-                        "containerId": "b42d4bbc879d64c9caf9c59fef150856b",
+                        "containerId": "bc48a0159a5a5487e8a54fc1409bc3d7e",
                         "brixConfig":
                             [
                                 {
@@ -44,8 +44,8 @@
                                     "config":
                                         {
                                             "id": "lblCrsl1",
-                                            "imagesActualSize": { "height": 325, "width": 478 },
-                                            "displayWidth": 457
+                                            "imagesActualSize": { "height": 477, "width": 477 },
+                                            "displayWidth": 457 
                                         },
                                     "configFixup":
                                         [
@@ -69,13 +69,13 @@
                                                                                         "parts":
                                                                                         [
                                                                                             { "type": "ref", "domain": "info", "refId": "imgBaseUrl" },
-                                                                                            { "type": "constant", "value": "img/68830_RE_02_03_S1.jpg" }
+                                                                                            { "type": "constant", "value": "img/68830_RE_04_03_S1.jpg" }
                                                                                         ]
                                                                                     }
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Solar energy production limited by cloudy skies and darkness<br/>            " }
+                                                                                "value": { "type": "constant", "value": "A switchgrass field  " }
                                                                             }
                                                                         ]
                                                                 },
@@ -91,35 +91,13 @@
                                                                                         "parts":
                                                                                         [
                                                                                             { "type": "ref", "domain": "info", "refId": "imgBaseUrl" },
-                                                                                            { "type": "constant", "value": "img/68830_RE_02_03_S2.jpg" }
+                                                                                            { "type": "constant", "value": "img/68830_RE_04_03_S2.jpg" }
                                                                                         ]
                                                                                     }
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Expense of panels and precious metals used in production" }
-                                                                            }
-                                                                        ]
-                                                                },
-                                                                {
-                                                                    "type": "object",
-                                                                    "properties":
-                                                                        [
-                                                                            {
-                                                                                "name": "URI",
-                                                                                "value":
-                                                                                    {
-                                                                                        "type": "join",
-                                                                                        "parts":
-                                                                                        [
-                                                                                            { "type": "ref", "domain": "info", "refId": "imgBaseUrl" },
-                                                                                            { "type": "constant", "value": "img/68830_RE_02_03_S3.jpg" }
-                                                                                        ]
-                                                                                    }
-                                                                            },
-                                                                            {
-                                                                                "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Land disturbance associated with the creation of large fields of solar panels" }
+                                                                                "value": { "type": "constant", "value": "Algae used in studies of biofuels" }
                                                                             }
                                                                         ]
                                                                 }
@@ -133,7 +111,7 @@
                                     "bricType": "SvgContainer",
                                     "config":
                                         {
-                                            "maxSize": { "height": 420, "width": 457}
+                                            "maxSize": { "height": 570, "width": 477}
                                         },
                                     "configFixup":
                                         [
@@ -143,7 +121,7 @@
                                                 "value":
                                                     {
                                                         "type": "d3select",
-                                                        "selector": "#b42d4bbc879d64c9caf9c59fef150856b"
+                                                        "selector": "#bc48a0159a5a5487e8a54fc1409bc3d7e"
                                                     }
                                             }
                                         ]
