--- a/Neff/Other/68830_RE_06_03.html
+++ b/Neff/Other/68830_RE_06_03.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="bdb25361c090a46c382a06ab5248940a3"></div>
+    <div id="b6feedd3398554a4b9835119457d787f6"></div>
     <script src="js/d3.v3.min.js"></script>
     
 	<script src="js/brixlib-compiled.js"></script>
@@ -23,12 +23,12 @@
 	// The activity config that defines the brix and mortar for this page
 	a.config =
 		{
-			"description": "Hydropower dam",
+			"description": "How a hydrogen fuel cell works",
 			"containerConfig":
 				[
 					{
 						"description": "container for the graph and labels",
-						"containerId": "bdb25361c090a46c382a06ab5248940a3",
+						"containerId": "b6feedd3398554a4b9835119457d787f6",
 						"brixConfig":
 							[
 								{
@@ -37,8 +37,8 @@
 									"config":
 										{
 											"id": "image1",
-                                            "caption": "Hydropower dam schematic",
-                                            "actualSize": {"height": 390, "width": 457},
+                                            "caption": "Hydrogen fuel cell schematic",
+                                            "actualSize": {"height": 518, "width": 477},
                                             "displayWidth": 457
 										},
                                     "configFixup":
@@ -52,7 +52,7 @@
                                                         "parts":
                                                         [
                                                             { "type": "ref", "domain": "info", "refId": "imgBaseUrl" },
-                                                            { "type": "constant", "value": "img/68830_RE_01_01.png" }
+                                                            { "type": "constant", "value": "img/68830_RE_06_03.png" }
                                                         ]
                                                     }
                                             }
@@ -66,10 +66,11 @@
                                             "id": "dataLabels",
                                             "type": "numbered",
                                             "labels": [
-                                                {"content": "1", "xyPos": [0.035, 0.65], "width": 0},
-                                                {"content": "2", "xyPos": [0.47, 0.27], "width": 0},
-                                                {"content": "3", "xyPos": [0.42, 0.58], "width": 0},
-                                                {"content": "4", "xyPos": [0.67, 0.66], "width": 0}
+                                                {"content": "1", "xyPos": [0.38, 0.97], "width": 0},
+                                                {"content": "2", "xyPos": [0.61, 0.74], "width": 0},
+                                                {"content": "3", "xyPos": [0.43, 0.35], "width": 0},
+                                                {"content": "4", "xyPos": [0.68, 0.38], "width": 0},
+                                                {"content": "5", "xyPos": [0.25, 0.3], "width": 0}
                                                     ]
                                         }
                                 },
@@ -78,7 +79,7 @@
 									"bricType": "SvgContainer",
 									"config":
 										{
-											"maxSize": {"height": 385, "width": 457}
+											"maxSize": {"height": 500, "width": 457}
 										},
 									"configFixup":
                                         [
@@ -88,7 +89,7 @@
                                                 "value":
                                                     {
                                                         "type": "d3select",
-                                                        "selector": "#bdb25361c090a46c382a06ab5248940a3"
+                                                        "selector": "#b6feedd3398554a4b9835119457d787f6"
                                                     }
                                             }
                                         ]
@@ -130,7 +131,7 @@
 					},
 					{
                         "description": "The container contains the liteable callouts",
-                        "containerId": "bdb25361c090a46c382a06ab5248940a3",
+                        "containerId": "b6feedd3398554a4b9835119457d787f6",
                         "brixConfig":
                             [
                                 {
@@ -143,10 +144,11 @@
                                             "type": "numbered",
                                             "textBits":
                                                 [    
-                                                    {"cols": ["When the sluice gate is opened, dammed water in the reservoir (with high potential energy) falls downhill."]},
-                                                    {"cols": ["The kinetic energy of the falling water turns the turbine."]},
-                                                    {"cols": ["The generator converts the mechanical energy of the spinning turbine into electricity."]},
-                                                    {"cols": ["The transformer boosts the electricity to a high voltage for transmission to homes and businesses."]}
+                                                    {"cols": ["Hydrogen fuel (H<sub>2</sub>) is added to one side of the fuel cell while oxygen (O<sub>2</sub>) is sent to the other."]},
+                                                    {"cols": ["At the anode, the hydrogen splits into a H+ ion and an electron. "]},
+                                                    {"cols": ["The H+ ions move through a membrane in the center of the fuel cell toward the cathode on the other side. "]},
+                                                    {"cols": ["The electrons flow through an electrical circuit toward the cathode and the H+ ions, creating an electric current that can be used to do work. "]},
+                                                    {"cols": ["At the cathode, the H+ ions, electrons, and oxygen (O<sub>2</sub>) react to form water, which then flows out of the fuel cell. "]}
                                                 ]
                                         }
                                 }
@@ -217,7 +219,7 @@
                                     "methodName": "draw",
                                     "args":
                                         [
-                                            { "type": "d3select", "selector": "#bdb25361c090a46c382a06ab5248940a3" }
+                                            { "type": "d3select", "selector": "#b6feedd3398554a4b9835119457d787f6" }
                                         ]
                                 },
                                 {
