--- a/Neff/Other/68830_RE_07_02.html
+++ b/Neff/Other/68830_RE_07_02.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="b42d4bbc879d64c9caf9c59fef150856b"></div>
+    <div id="baf139a084654428e8b882f663becc92b"></div>
     <script src="js/d3.v3.min.js"></script>
     
     <script src="js/brixlib-compiled.js"></script>
@@ -28,14 +28,14 @@
 
     a.config =
         {
-			"description": "Environmental impacts and practical limitations of solar energy production",
+			"description": "Barriers to changing energy production and use",
             //"imgBaseUrl": "http://localhost:8088/images/",
             "imgBaseUrl": "",
             "containerConfig":
                 [
                     {
                         "description": "Container for the LabelCarousel",
-                        "containerId": "b42d4bbc879d64c9caf9c59fef150856b",
+                        "containerId": "baf139a084654428e8b882f663becc92b",
                         "brixConfig":
                             [
                                 {
@@ -44,7 +44,7 @@
                                     "config":
                                         {
                                             "id": "lblCrsl1",
-                                            "imagesActualSize": { "height": 325, "width": 478 },
+                                            "imagesActualSize": { "height": 326, "width": 476 },
                                             "displayWidth": 457
                                         },
                                     "configFixup":
@@ -69,13 +69,13 @@
                                                                                         "parts":
                                                                                         [
                                                                                             { "type": "ref", "domain": "info", "refId": "imgBaseUrl" },
-                                                                                            { "type": "constant", "value": "img/68830_RE_02_03_S1.jpg" }
+                                                                                            { "type": "constant", "value": "img/68830_RE_07_02_S1.jpg" }
                                                                                         ]
                                                                                     }
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Solar energy production limited by cloudy skies and darkness<br/>            " }
+                                                                                "value": { "type": "constant", "value": "The cost of renewable energy technology as a whole is falling, but the cost of the technology associated with certain renewable sources, such as solar, still remains higher than the cost of fossil fuels." }
                                                                             }
                                                                         ]
                                                                 },
@@ -91,13 +91,13 @@
                                                                                         "parts":
                                                                                         [
                                                                                             { "type": "ref", "domain": "info", "refId": "imgBaseUrl" },
-                                                                                            { "type": "constant", "value": "img/68830_RE_02_03_S2.jpg" }
+                                                                                            { "type": "constant", "value": "img/68830_RE_07_02_S2.jpg" }
                                                                                         ]
                                                                                     }
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Expense of panels and precious metals used in production" }
+                                                                                "value": { "type": "constant", "value": "This gas station is part of an extensive and costly infrastructure that supports fossil fuel use. New facilities to support renewable energy will take time and resources to create." }
                                                                             }
                                                                         ]
                                                                 },
@@ -113,13 +113,13 @@
                                                                                         "parts":
                                                                                         [
                                                                                             { "type": "ref", "domain": "info", "refId": "imgBaseUrl" },
-                                                                                            { "type": "constant", "value": "img/68830_RE_02_03_S3.jpg" }
+                                                                                            { "type": "constant", "value": "img/68830_RE_07_02_S3.jpg" }
                                                                                         ]
                                                                                     }
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Land disturbance associated with the creation of large fields of solar panels" }
+                                                                                "value": { "type": "constant", "value": "Government policies, including laws and taxation, play a major role in energy use and currently favor fossil energy sources over renewable energy." }
                                                                             }
                                                                         ]
                                                                 }
@@ -133,7 +133,7 @@
                                     "bricType": "SvgContainer",
                                     "config":
                                         {
-                                            "maxSize": { "height": 420, "width": 457}
+                                            "maxSize": { "height": 470, "width": 457}
                                         },
                                     "configFixup":
                                         [
@@ -143,7 +143,7 @@
                                                 "value":
                                                     {
                                                         "type": "d3select",
-                                                        "selector": "#b42d4bbc879d64c9caf9c59fef150856b"
+                                                        "selector": "#baf139a084654428e8b882f663becc92b"
                                                     }
                                             }
                                         ]
