update trying <br/> again

--- a/Neff/Other/68830_EU_04_04.html
+++ b/Neff/Other/68830_EU_04_04.html
@@ -74,7 +74,7 @@
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Solar panels on a house generate electricity from the sun.<br><br>" }
+                                                                                "value": { "type": "constant", "value": "Solar panels on a house generate electricity from the sun.<br/><br/>" }
                                                                             }
                                                                         ]
                                                                 },
