--- a/Neff/Other/68830_EU_08_04a.html
+++ b/Neff/Other/68830_EU_08_04a.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE xhtml>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -75,7 +75,7 @@
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Increasing affluence and demand for consumer goods<br><br>" }
+                                                                                "value": { "type": "constant", "value": "Increasing affluence and demand for consumer goods<br/><br/>" }
                                                                             }
                                                                         ]
                                                                 },
